Intro. to Bootstrap

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,7 @@
 /Week01/Git_test/.idea/workspace.xml
+
+node_modules
+/Week01/Git_test/.idea/jsLibraryMappings.xml
+.idea/workspace.xml
+.idea/jsLibraryMappings.xml
+.git
