--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "git-test",
+  "name": "conFusion",
   "version": "1.0.0",
   "description": "This is a test dir",
-  "main": "index.html",
+  "main": "/Week01/gonFusion/index.html",
   "scripts": {
     "start": "npm run lite",
     "test": "echo \"Error: no test specified\" && exit 1",
