--- a/Week01/gonFusion/package.json
+++ b/Week01/gonFusion/package.json
@@ -2,7 +2,7 @@
   "name": "conFusion",
   "version": "1.0.0",
   "description": "This is a test dir",
-  "main": "Week01/gonFusion/index.html",
+  "main": "/Week01/gonFusion/index.html",
   "scripts": {
     "start": "npm run lite",
     "test": "echo \"Error: no test specified\" && exit 1",
